Comparaison peft vs. base model

--- a/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_sirene.ipynb
+++ b/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_sirene.ipynb
@@ -93,6 +93,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### FINE-TUNING DU MODELE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# On importe la liste de dictionnaires de conversations Sirene\n",
     "import os, sys, s3fs\n",
     "S3_ENDPOINT_URL = \"https://\" + os.environ[\"AWS_S3_ENDPOINT\"]\n",
@@ -259,23 +268,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_prompt(data_point):\n",
-    "    \"\"\"\n",
-    "    Generates a formatted prompt for fine-tuning from a data point.\n",
-    "    \"\"\"\n",
-    "    prefix_text = \"Ceci est une conversation au sujet de formalités administratives. Soyez courtois et pertinent. Si vous ne savez pas, n'inventez pas la réponse\" #instruction\n",
-    "    context = data_point['Context']\n",
-    "    response = data_point['Response']\n",
-    "    formatted_prompt = f\"<s>[INST] {prefix_text} {context} [/INST]{response}</s>\"\n",
-    "    return formatted_prompt\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "print(dataset[0])\n",
     "print(generate_prompt(dataset[0]))"
    ]
@@ -286,33 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assuming `dataset` is loaded using the datasets library\n",
-    "dataset = dataset.map(lambda x: {\"prompt\": generate_prompt(x)})\n",
-    "def tokenize_function(examples):\n",
-    "    return tokenizer(examples[\"prompt\"], padding=\"max_length\", truncation=True)\n",
+    "dataset = dataset.shuffle(seed=1234)\n",
     "\n",
-    "tokenized_dataset = dataset.map(tokenize_function, batched=True)\n",
-    "dataset = dataset.shuffle(seed=1234)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(tokenized_dataset[0])\n",
-    "print(tokenized_dataset)\n",
-    "print(tokenized_dataset['input_ids'][0])\n",
-    "print(tokenizer.decode(tokenized_dataset['input_ids'][0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Split the dataset into training and testing sets\n",
     "train_test_split = dataset.train_test_split(test_size=0.05)  # test_size for testing\n",
     "train_dataset = train_test_split[\"train\"]\n",
@@ -503,7 +470,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_model = \"./Mistral_Sirene_240718\"\n"
+    "\n",
+    "# SAUVEGARDE DU MODELE"
    ]
   },
   {
@@ -522,7 +490,7 @@
    "outputs": [],
    "source": [
     "# On importe le modèle Peft sauvegardé précédemment\n",
-    "! mc cp s3/vlapegue/train_sirene/Mistral_Sirene_240718 ./Mistral_Sirene_240718 --recursive"
+    "! mc cp s3/vlapegue/train_sirene/Mistral_Sirene_240718/Mistral_Sirene_240718 ./Mistral_Sirene_240718 --recursive"
    ]
   },
   {
@@ -533,6 +501,7 @@
    "source": [
     "base_model = AutoModelForCausalLM.from_pretrained(\n",
     "    base_model_id,\n",
+    "    temperature=0,\n",
     "    low_cpu_mem_usage=True,\n",
     "    return_dict=True,\n",
     "    #torch_dtype=torch.float16,\n",
@@ -546,20 +515,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_model= PeftModel.from_pretrained(model, new_model)\n",
-    "merged_model= merged_model.merge_and_unload()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Utilisation du modèle de base\n",
-    "\n",
-    "inputs = tokenizer(\"Qui est l'actuel président de la République française ?\", return_tensors=\"pt\")\n",
-    "output_generate=base_model.generate(**inputs,max_new_tokens=80, return_dict_in_generate=True, output_scores=True)\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Qui est l'actuel président de la République française ?\"}]\n",
+    "model_inputs = tokenizer.apply_chat_template(messages, return_tensors=\"pt\")\n",
+    "output_generate=base_model.generate(model_inputs,max_new_tokens=80, temperature=0,return_dict_in_generate=True, output_scores=True,pad_token_id=tokenizer.eos_token_id)\n",
     "transition_scores = base_model.compute_transition_scores(output_generate.sequences, output_generate.scores, normalize_logits=True)"
    ]
   },
@@ -571,7 +530,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "input_length = 1 if base_model.config.is_encoder_decoder else inputs.input_ids.shape[1]\n",
+    "input_length = 1 if base_model.config.is_encoder_decoder else model_inputs.size(dim=1)\n",
     "\n",
     "generated_tokens = output_generate.sequences[:, input_length:]\n",
     "\n",
@@ -604,11 +563,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Utilisation du modèle de base pour une question Sirene\n",
+    "\n",
+    "messages = [{\"role\": \"user\", \"content\": \"J’aimerais obtenir mon avis de situation au répertoire pour avis et suis disponible si d’autres documents s’avéraient nécessaires.\"}]\n",
+    "model_inputs = tokenizer.apply_chat_template(messages, return_tensors=\"pt\")\n",
+    "#inputs = tokenizer(\"J’aimerais obtenir mon avis de situation au répertoire pour avis et suis disponible si d’autres documents s’avéraient nécessaires.\", return_tensors=\"pt\")\n",
+    "output_generate=base_model.generate(model_inputs,max_new_tokens=80, temperature=0,return_dict_in_generate=True, output_scores=True,pad_token_id=tokenizer.eos_token_id)\n",
+    "transition_scores = base_model.compute_transition_scores(output_generate.sequences, output_generate.scores, normalize_logits=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "input_length = 1 if base_model.config.is_encoder_decoder else model_inputs.size(dim=1)\n",
+    "\n",
+    "generated_tokens = output_generate.sequences[:, input_length:]\n",
+    "\n",
+    "tokens=[]\n",
+    "probas=[]\n",
+    "\n",
+    "for tok, score in zip(generated_tokens[0], transition_scores[0]):\n",
+    "\n",
+    "# | token | token string | log probability | probability\n",
+    "    tokens.append(tokenizer.decode(tok))\n",
+    "    probas.append(np.exp(score.numpy()))\n",
+    "    print(f\"| {tok:5d} | {tokenizer.decode(tok):8s} | {score.numpy():.3f} | {np.exp(score.numpy()):.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame({'tokens':tokens,'probas': probas})\n",
+    "df.to_csv(\"sirene_base_tokens.csv\", sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_model = \"./Mistral_Sirene_240718\"\n",
+    "merged_model= PeftModel.from_pretrained(base_model, new_model)\n",
+    "merged_model= merged_model.merge_and_unload()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Utilisation du modèle fine-tuné\n",
     "\n",
     "messages = [{\"role\": \"user\", \"content\": \"Qui est l'actuel président de la République française ?\"}]\n",
     "model_inputs = tokenizer.apply_chat_template(messages, return_tensors=\"pt\")\n",
-    "output_generate=merged_model.generate(model_inputs,max_new_tokens=80, return_dict_in_generate=True, output_scores=True,pad_token_id=tokenizer.eos_token_id)\n",
+    "output_generate=merged_model.generate(model_inputs,max_new_tokens=80, temperature=0,return_dict_in_generate=True, output_scores=True,pad_token_id=tokenizer.eos_token_id)\n",
     "transition_scores = merged_model.compute_transition_scores(output_generate.sequences, output_generate.scores, normalize_logits=True)"
    ]
   },
@@ -620,7 +640,8 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "input_length = 1 if merged_model.config.is_encoder_decoder else inputs.input_ids.shape[1]\n",
+    "#input_length = 1 if merged_model.config.is_encoder_decoder else inputs.input_ids.shape[1]\n",
+    "input_length = 1 if merged_model.config.is_encoder_decoder else model_inputs.size(dim=1)\n",
     "\n",
     "generated_tokens = output_generate.sequences[:, input_length:]\n",
     "\n",
@@ -645,6 +666,137 @@
     "import pandas as pd\n",
     "df = pd.DataFrame({'tokens':tokens,'probas': probas})\n",
     "df.to_csv(\"general_merged_tokens.csv\", sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utilisation du modèle fine-tuné pour une question Sirene\n",
+    "\n",
+    "messages = [{\"role\": \"user\", \"content\": \"J’aimerais obtenir mon avis de situation au répertoire pour avis et suis disponible si d’autres documents s’avéraient nécessaires.\"}]\n",
+    "model_inputs = tokenizer.apply_chat_template(messages, return_tensors=\"pt\")\n",
+    "output_generate=merged_model.generate(model_inputs,max_new_tokens=80, temperature=0,return_dict_in_generate=True, output_scores=True,pad_token_id=tokenizer.eos_token_id)\n",
+    "transition_scores = merged_model.compute_transition_scores(output_generate.sequences, output_generate.scores, normalize_logits=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#input_length = 1 if merged_model.config.is_encoder_decoder else inputs.input_ids.shape[1]\n",
+    "input_length = 1 if merged_model.config.is_encoder_decoder else model_inputs.size(dim=1)\n",
+    "\n",
+    "generated_tokens = output_generate.sequences[:, input_length:]\n",
+    "\n",
+    "tokens=[]\n",
+    "probas=[]\n",
+    "\n",
+    "for tok, score in zip(generated_tokens[0], transition_scores[0]):\n",
+    "\n",
+    "# | token | token string | log probability | probability\n",
+    "    tokens.append(tokenizer.decode(tok))\n",
+    "    probas.append(np.exp(score.numpy()))\n",
+    "    print(f\"| {tok:5d} | {tokenizer.decode(tok):8s} | {score.numpy():.3f} | {np.exp(score.numpy()):.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame({'tokens':tokens,'probas': probas})\n",
+    "df.to_csv(\"sirene_merged_tokens.csv\", sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utilisation du modèle de base avec model_inputs\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Qui est l'actuel président de la République française ?\"}]\n",
+    "model_inputs = tokenizer.apply_chat_template(messages, return_tensors=\"pt\")\n",
+    "output_generate=base_model.generate(model_inputs,max_new_tokens=80, temperature=0,return_dict_in_generate=True, output_scores=True,pad_token_id=tokenizer.eos_token_id)\n",
+    "transition_scores = base_model.compute_transition_scores(output_generate.sequences, output_generate.scores, normalize_logits=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#input_length = 1 if base_model.config.is_encoder_decoder else inputs.input_ids.shape[1]\n",
+    "input_length = 1 if base_model.config.is_encoder_decoder else model_inputs.size(dim=1)\n",
+    "\n",
+    "generated_tokens = output_generate.sequences[:, input_length:]\n",
+    "\n",
+    "tokens=[]\n",
+    "probas=[]\n",
+    "\n",
+    "for tok, score in zip(generated_tokens[0], transition_scores[0]):\n",
+    "\n",
+    "# | token | token string | log probability | probability\n",
+    "    tokens.append(tokenizer.decode(tok))\n",
+    "    probas.append(np.exp(score.numpy()))\n",
+    "    print(f\"| {tok:5d} | {tokenizer.decode(tok):8s} | {score.numpy():.3f} | {np.exp(score.numpy()):.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utilisation du modèle de base avec inputs\n",
+    "\n",
+    "inputs = tokenizer(\"Qui est l'actuel président de la République française ?\", return_tensors=\"pt\")\n",
+    "output_generate=base_model.generate(**inputs,max_new_tokens=80, temperature=0, return_dict_in_generate=True, output_scores=True)\n",
+    "transition_scores = base_model.compute_transition_scores(output_generate.sequences, output_generate.scores, normalize_logits=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "input_length = 1 if base_model.config.is_encoder_decoder else inputs.input_ids.shape[1]\n",
+    "#input_length = 1 if base_model.config.is_encoder_decoder else model_inputs.size(dim=1)\n",
+    "\n",
+    "generated_tokens = output_generate.sequences[:, input_length:]\n",
+    "\n",
+    "tokens=[]\n",
+    "probas=[]\n",
+    "\n",
+    "for tok, score in zip(generated_tokens[0], transition_scores[0]):\n",
+    "\n",
+    "# | token | token string | log probability | probability\n",
+    "    tokens.append(tokenizer.decode(tok))\n",
+    "    probas.append(np.exp(score.numpy()))\n",
+    "    print(f\"| {tok:5d} | {tokenizer.decode(tok):8s} | {score.numpy():.3f} | {np.exp(score.numpy()):.2%}\")"
    ]
   }
  ],
